# HMN24-course

./: .gitignore  README.md  pyproject.toml
.obsidian/: app.json  community-plugins.json  file-recovery.json  hotkeys.json  templates.json  workspace.json
.obsidian/plugins/obsidian-git/: data.json
assignments/: assignment1-introductions-and-explorations.md
code/data/freemocap_test_data/: freemocap_test_data.ipynb  freemocap_test_data_camera_calibration.toml  freemocap_test_data_frame_name_xyz.npy
code/data/freemocap_test_data/output_data/: mediapipe_body_3d_xyz.csv  mediapipe_body_3d_xyz.npy  mediapipe_face_3d_xyz.npy  mediapipe_left_hand_3d_xyz.csv  mediapipe_left_hand_3d_xyz.npy  mediapipe_right_hand_3d_xyz.csv  mediapipe_right_hand_3d_xyz.npy  mediapipe_rigid_bones_3d.npy  recording_parameters.json
code/data/freemocap_test_data/output_data/center_of_mass/: mediapipe_segmentCOM_frame_joint_xyz.npy  mediapipe_total_body_center_of_mass_xyz.npy
code/data/freemocap_test_data/output_data/raw_data/: mediapipe_3dData_numCams_numFrames_numTrackedPoints_reprojectionError.npy  mediapipe_3dData_numFrames_numTrackedPoints_reprojectionError.npy  mediapipe_3dData_numFrames_numTrackedPoints_spatialXYZ.npy
code/data/freemocap_test_data/saved_data/: _BONE_AND_JOINT_DATA_README.md  _FREEMOCAP_DATA_README.md
code/video_transcriber/: README.md  video_transcriber.py
lectures/: Intro and Setup.md  Winter anthropometry.md  center-of-mass-base-of-support-balance-control.md  com-gifs.md  reddit gifs.md
notes/: 2024-09-HMN-lectures.md
topics/: index.md
(+12 files in other folders)
